# fast-api-py

./: pyproject.toml
fast_api_py/: app.py
tests/: test_app.py
